FIX:  broken layout in CountryInfo on landscape

--- a/src/index.css
+++ b/src/index.css
@@ -127,3 +127,7 @@
     @apply font-sans;
     }
 }
+
+* {
+  outline: none;
+}
